--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,51 @@
+.inline-block {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.logo {
+    width: 23%;
+    padding: 1%;
+    text-align: center;
+}
+
+nav {
+    background-color: #46DFE9;
+    width:76%;
+    padding: 1%;
+    text-align: justify;
+}
+
+ul {
+    color:black;
+    width: 50%;
+    margin-left: atuo;
+}
+
+.heroImg {
+    height: 400px;
+    width: 400px;
+    padding: 25px;
+}
+
+.content {
+    width: 500px;
+    margin: 0 atuo;
+}
+
+footer {
+    padding: 20px;
+}
+
+footer ul {
+    color: white;
+    display: inline-block;
+    vertical-align: top;
+    padding: 20px;
+}
+
 body {
-    color: blue;
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
